--- a/.gitignore
+++ b/.gitignore
@@ -1,24 +1,25 @@
-# Compiled class file
-*.class
+HELP.md
+build/
+!**/src/main/**
+!**/src/test/**
 
-# Log file
+### IntelliJ IDEA ###
+.idea
+*.iws
+*.iml
+*.ipr
+
+### Gradle ###
+.gradle
+gradle/wrapper
+gradlew
+gradlew.bat
+
+
+### Logs ###
 *.log
 
-# BlueJ files
-*.ctxt
+### Config ###
+auth.properties
 
-# Mobile Tools for Java (J2ME)
-.mtj.tmp/
-
-# Package Files #
-*.jar
-*.war
-*.nar
-*.ear
-*.zip
-*.tar.gz
-*.rar
-
-# virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
-hs_err_pid*
-replay_pid*
+.DS_Store
